# anoma-sdk

./: .credo.exs  .iex.exs  .tool-versions  BUILD_APP.md  Cargo.toml  NOTES.md  README.md  checksum-Elixir.AnomaSDK.Arm.Test.exs  checksum-Elixir.AnomaSDK.Arm.exs  mix.exs  node.sh
.cargo/: config.toml
.github/: elixir.yml
.github/workflows/: elixir.yml  rust.yml  rustler.yml
config/: config.exs
lib/: anoma.ex  anoma_sdk.ex  json.ex  util.ex  validate.ex
lib/arm/: action.ex  arm.ex  arm_test.ex  compliance_unit.ex  compliance_witness.ex  constants.ex  delta.ex  delta_witness.ex  forwarder_calldata.ex  inspect.ex  leaf.ex  merkle_path.ex  nullifier_key.ex  resource.ex  transaction.ex
lib/arm/datastructures/: action.ex  app_data.ex  cipher_text.ex  compliance_instance.ex  compliance_unit.ex  compliance_witness.ex  delta_proof.ex  delta_witness.ex  expirable_blob.ex  keypair.ex  leaf.ex  logic_proof.ex  logic_verifier.ex  logic_verifier_input.ex  logic_verifier_inputs.ex  merkle_path.ex  merkle_tree.ex  nullifier_key.ex  nullifier_key_commitment.ex  resource.ex  transaction.ex  trivial_logic_witness.ex
lib/arm/datastructures/checked/: action.ex  app_data.ex  compliance_instance.ex  compliance_unit.ex  merkle_tree.ex
lib/examples/: e_nif_data.ex  e_transaction.ex  json_encoding.ex  simple_transaction.ex
lib/examples/counter/: constants.ex  counter.ex  counter_nif.ex  example.ex
lib/examples/counter/structs/: counter_logic.ex  counter_witness.ex
native/arm/: Cargo.toml
native/arm/src/: lib.rs
native/arm_bindings/: Cargo.toml
native/arm_bindings/src/: lib.rs
native/arm_bindings_test/: Cargo.toml
native/arm_bindings_test/src/: lib.rs  test.rs
native/arm_test/: Cargo.toml
native/arm_test/src/: lib.rs  test.rs
native/counter/: Cargo.toml
native/counter/host/: Cargo.toml
native/counter/host/src/: main.rs
native/counter/methods/guest/: Cargo.toml
native/counter/src/: lib.rs
native/counter_example/host/: Cargo.toml
native/counter_example/host/src/: lib.rs  main.rs.bak
native/counter_example/methods/guest/: Cargo.toml
native/counter_lib/: Cargo.toml
native/counter_lib/elf/: id.txt
native/counter_lib/src/: counter.rs  counter_logic.rs  lib.rs  nifs.rs  proof.rs  test.rs  test_nifs.rs
native/counter_logic_circuit/methods/guest/: Cargo.toml
native/counter_nif/: Cargo.toml
native/counter_nif/src/: lib.rs  test.rs  transaction.rs
native/counter_witness/: Cargo.toml
native/counter_witness/src/: lib.rs
native/test_executable/: Cargo.toml
native/test_executable/src/: main.rs
native/testing/: Cargo.toml
native/testing/src/: main.rs
native/zkvm/: Cargo.toml
native/zkvm/src/: lib.rs
priv/plts/: project.plt  project.plt.hash
test/: anoma_test.exs  json_encoding_roundtrip_test.exs
test/native/: arm_test.exs  counter_test.exs
