[package]
name = "arm"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "arm"
crate-type = ["cdylib"]

[dependencies]
evm_protocol_adapter_bindings = { git = "https://github.com/anoma/evm-protocol-adapter", rev = "b13f03b951a4a50d7c6635b40bfc51b549346eff" }
arm = { git = "https://github.com/anoma/arm-risc0", branch = "xuyang/simplify_features", default-features = true, features = ["nif", "transaction", "groth16_prover", "bonsai", "cuda"]}

counter-app = { git = "https://github.com/anoma/arm-risc0", package = "counter-app", tag = "v0.3.0" }
risc0-zkvm = { version = "2.3.1", features = ["std", "unstable"], default-features = false }

rustler = "0.36.2"
serde = { version = "1.0.197", default-features = false }
serde_json = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
k256 = { version = "=0.13.3", features = ["arithmetic", "serde", "expose-field", "std", "ecdsa", "hash2curve"], default-features = false }
rand = "0.8"
hex = "0.4.3"