[package]
name = "arm_test"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "arm_test"
crate-type = ["cdylib"]

[dependencies]
evm_protocol_adapter_bindings = { git = "https://github.com/anoma/evm-protocol-adapter", rev = "bf772bfada08d18fcf35b1b115f28ae56ec3d94f" }
arm = { git = "https://github.com/anoma/arm-risc0", branch = "xuyang/simplify_features", default-features = true, features = ["nif"] }
counter-app = { git = "https://github.com/anoma/arm-risc0", package = "counter-app", tag = "v0.3.0" }
risc0-zkvm = { version = "2.3.1", features = ["std", "unstable"], default-features = false }

rustler = "0.36.2"
serde = { version = "1.0.197", default-features = false }
serde_json = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
k256 = { version = "=0.13.3", features = ["arithmetic", "serde", "expose-field", "std", "ecdsa", "hash2curve"], default-features = false }
rand = "0.8"
hex = "0.4.3"