[package]
name = "counter_lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "counter_lib"
crate-type = ["cdylib"]

[dependencies]
arm = { git = "https://github.com/anoma/arm-risc0", features = ["nif"], package = "arm", version = "0.2.0" }
risc0-zkvm = { version = "2.0.2", features = ["prove", "std", "unstable"] }
hex = "0.4.3"
counter = { path = "../counter" }
rustler = "0.36.2"
serde = { version = "1.0.219", features = ["derive"] }
lazy_static = "1.5.0"
rand = "0.8.5"