[package]
name = "counter_lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "counter_lib"
crate-type = ["cdylib"]

[dependencies]
arm = { git = "https://github.com/anoma/arm-risc0", package = "arm", tag = "v0.3.0", features = ["nif"] }
counter-witness = { path = "../counter_witness" }
rustler = "0.36.2"
rand = "0.8"
risc0-zkvm = "=2.3.1"
lazy_static = "1.5.0"
hex = "0.4"
serde = "1.0"


# remove this, dev only
counter-app = { git = "https://github.com/anoma/arm-risc0", package = "counter-app", tag = "v0.3.0" }