[package]
name = "counter-witness"
version = "0.1.0"
edition = "2021"

[dependencies]
arm = { git = "https://github.com/anoma/arm-risc0", package = "arm", tag = "v0.3.0", features = ["logic_circuit", "nif"], default-features = false}
serde = { version = "1.0.197", default-features = false }
rustler = "0.36.2"